# modificate

./: .gitignore  AddMod.cmake  CMakeLists.txt  README.md  TODO.md  vcpkg.json
client/: CMakeLists.txt  atlas.h  camera.c  chunk.c  client.c  def.h  main.cpp  render.c  render.h  window.c
client/include/client/: atlas.h  render.h
client/render/: Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h
cmake/: Packaging.cmake
interface/include/modificate/: interface.h
mods/luajit/: CMakeLists.txt  loader.c
mods/luajit/bootstrap/: cmp.lua  init.lua  log.lua
script/: CMakeLists.txt
script/include/script/: Mod.h  Vm.h
script/src/: LuaVm.cpp  Mod.cpp  Tar.cpp
script/src/lua/: LibBlock.cpp  LibBlock.h  LibWorld.cpp  LuaVm.cpp  Mod.cpp
script/src/lua/base/: mod.json
script/tests/lua/: CMakeLists.txt  block.lua  expect.cpp  expect.lua  tmpfile.lua
script/tests/mod/: CMakeLists.txt  unpack.cpp
script/tests/mod/tar/: mod.tar
server/: CMakeLists.txt  server.c
shared/: CMakeLists.txt  cmp.c  log.c  mod.c  world.c
shared/include/shared/: Block.h  Chunk.h  Entity.h  Level.h  Mod.h  Platform.h  Vm.h  World.h  environment.h  filesystem.h  log.h  mod.h  world.h
shared/src/: Chunk.cpp  Level.cpp  Platform.cpp  Tar.cpp  Vm.cpp  VmThread.cpp  World.cpp
shared/src/lua/: LibBlock.h  LibWorld.cpp  LibWorld.h  LuaVector.cpp  LuaVector.h  LuaVm.cpp  LuaWorld.cpp  LuaWorld.h  Mod.cpp
shared/src/lua/base/: main.lua  mod.json
shared/tests/lua/: CMakeLists.txt  block.lua  expect.cpp  expect.lua  vector.lua
shared/tests/mod/: CMakeLists.txt  loading.cpp  unpack.cpp
shared/tests/mod/tar/: mod.json  mod.tar
world/: CMakeLists.txt
world/include/world/: Block.h  Chunk.h  World.h
world/src/: Chunk.cpp  World.cpp
